--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HTML wireframe</title>
+    <title>Oogii's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/2e3e27cf9f.js"></script>
 </head>
 <body>
-    <nav role="navigation">Nav</nav>
+    <nav role="navigation" class="nav_foot">
+        <ul>
+            <li class="active">Oogii</li>
+            <li>Bio</li>
+            <li>Portfolio</li>
+            <li class="footer_data" id="copyright">&copy; Oogii 2019</li>
+            <li class="footer_data"><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
+            <li class="footer_data"><a href="https://www.linkedin.com/in/oyungerel-gerelmend-4027b9125/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+    </nav>
     <main role="main">
         <section class="container">
-            <section class="section_left column">
-                bio left
-            </section>
-            <section class="section_right column">
-                language right
-            </section>
+            <h1>
+                Hi, I am Oogii. I am a front end development student at Thinkful.
+            </h1>
+            <p>
+                    I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a women developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience and persistence.
+            </p>
+            <p id="l1"><span>Javascript</span><span>HTML</span></p>
+            <p id="l2"><span>CSS</span><span>React</span></p>
+            <p id="l3"><span>git</span><span>github</span></p>
+            <p id="l4"><span>JQuery</span></p>
         </section>
         <section class="container">
-                <section class="section_left column">
-                    Portfolio left
-                </section>
-                <section class="section_right column ">
-                    app right
-                </section>
+                Portfolio left
+                app right
         </section>
     </main>
-    <footer role="content-info">Footer</footer>
+    <footer role="content-info" class="nav_foot">
+        <ul>
+            <li id="copyright">&copy; Oogii 2019</li>
+            <li><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/oyungerel-gerelmend-4027b9125/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
