updated styles and content

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <p id="l4"><span>JQuery</span></p>
         </section>
         <section class="container">
-                Portfolio left
-                app right
+                <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture. The app is written in HTML, CSS, and jQuery.</p>
+                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live link</a> <a href=https://github.com/oogiisar/quizApp>Github</a></p>
+                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
         </section>
     </main>
     <footer role="content-info" class="nav_foot">
