added html and css

--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
     </nav>
     <main role="main">
         <section class="container">
-            <h1>
-                Hi, I am Oogii. I am a front end development student at Thinkful.
-            </h1>
-            <p>
-                    I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a women developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience and persistence.
+            <h1>Hi, I am Oogii. I am a front end development student at Thinkful.</h1>
+            <p> 
+                I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a woman developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience and persistence.
             </p>
             <p id="l1"><span>Javascript</span><span>HTML</span></p>
             <p id="l2"><span>CSS</span><span>React</span></p>
-            <p id="l3"><span>git</span><span>github</span></p>
+            <p id="l3"><span>Git</span><span>Github</span></p>
             <p id="l4"><span>JQuery</span></p>
+            <p id="l5"><span>Node</span><span>Postgres</span></p>
         </section>
         <section class="container">
                 <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture. The app is written in HTML, CSS, and jQuery.</p>
-                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live link</a> <a href=https://github.com/oogiisar/quizApp>Github</a></p>
+                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live |</a> <a href=https://github.com/oogiisar/quizApp>Github</a></p>
                 <p><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
         </section>
     </main>
@@ -44,5 +43,7 @@
             <li><a href="https://www.linkedin.com/in/oyungerel-gerelmend-4027b9125/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
