--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 <body>
     <nav role="navigation" class="nav_foot">
         <ul>
-            <li class="active">Oogii</li>
-            <li>Bio</li>
-            <li>Portfolio</li>
+            <li class="menu nav_oogii">Oogii</li>
+            <li class="menu nav_bio active">Bio</li>
+            <li class="menu nav_portfolio">Portfolio</li>
+            <li class="menu nav_contact">Contact</li>
             <li class="footer_data" id="copyright">&copy; Oogii 2019</li>
             <li class="footer_data"><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
             <li class="footer_data"><a href="https://www.linkedin.com/in/oyungerel-gerelmend-4027b9125/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </nav>
     <main role="main">
-        <section class="container">
+        <section class="container bio">
             <h1>Hi, I am Oogii. I am a front end development student at Thinkful.</h1>
             <p> 
-                I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a woman developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience and persistence.
+                I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a woman developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience, self-discipline, and persistence.
             </p>
-            <p id="l1"><span>Javascript</span><span>HTML</span></p>
-            <p id="l2"><span>CSS</span><span>React</span></p>
-            <p id="l3"><span>Git</span><span>Github</span></p>
-            <p id="l4"><span>JQuery</span></p>
-            <p id="l5"><span>Node</span><span>Postgres</span></p>
+            <p class="cloud"><img src="img/cloud.png" alt="my languages cloud"></p>
         </section>
-        <section class="container">
+        <section class="container portfolio">
                 <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture. The app is written in HTML, CSS, and jQuery.</p>
-                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live |</a> <a href=https://github.com/oogiisar/quizApp>Github</a></p>
-                <p><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
+                <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/quizApp target="_blank">Github</a></p>
+                <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
+        </section>
+        <section class="container contact">
+                <p>You can contact me anytime just click the link <a href="mailto:oogiisar@gmail.com">Oogii</a></p>
         </section>
     </main>
     <footer role="content-info" class="nav_foot">
