added trailrun project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/quizApp target="_blank">Github</a></p>
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
         </section>
+        <section class="container portfolio">
+            <p>Trail run app helps people to find trails in any city around the United States. Users can see the 5 days weather, map, and trail information. The app is written in HTML, CSS, jQuery, and uses APIs.</p>
+            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/trailrunfinder target="_blank">Github</a></p>
+            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank"><img src="img/trailrun.png" alt="Image of my  trailrun project"></a></p>
+        </section>
         <section class="container contact">
                 <p>You can contact me anytime just click the link <a href="mailto:oogiisar@gmail.com">Oogii</a></p>
                 <p>Or check out my <a href="https://www.linkedin.com/in/oyungerel-gerelmend-4027b9125/" target="_blank">LinkedIn</a> and <a href="https://github.com/oogiisar/" target="_blank">Github</a></p>
