updated layout of projects and correct some html errors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Oogii's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, charset=utf-8">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/2e3e27cf9f.js"></script>
@@ -19,7 +19,7 @@
             <li class="menu nav_bio active hidden">Bio</li>
             <li class="menu nav_portfolio hidden">Portfolio</li>
             <li class="menu nav_contact hidden">Contact</li>
-            <li class="footer_data" id="copyright">&copy; Oogii 2019</li>
+            <li class="footer_data" class="copyright">&copy; Oogii 2019</li>
             <li class="footer_data"><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
             <li class="footer_data"><a href="https://www.linkedin.com/in/oyungerel-bernstein/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li class="footer_data"><a href="mailto:oogiisar@gmail.com"><i class="fas fa-envelope"></i></a></li>
@@ -30,38 +30,90 @@
             <p id="me"><img src="img/profilePic.jpg" alt="It is me Oogii!"></p>
             <h1>Hi, I am Oogii. I am a front end development student at Thinkful.</h1>
             <p> 
-                I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a woman developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience, self-discipline, and persistence.
+                I grew up in a small town in the very cold country of Mongolia. I am proud to have a different background and life experiences than others. My unique culture and experiences make me who I am and gives a different perspective. I want to share my perspective and learn for others working with a team of developers. I was raised in a nomadic lifestyle without technology. When I immigrated to America it gave me a great opportunity to start my new life in the tech field. I am very happy to become a woman developer and become a role model for the young generation in my country, especially girls. No matter where you come from, if you work hard you can accomplish your goals. Since I have come to America I have learned this lesson. I am also a marathon runner. This skill has taught me patience, self-discipline, and persistence.
             </p>
             <p class="cloud"><img src="img/cloud.png" alt="my languages cloud"></p>
         </section>
+        <hr />
         <section class="container portfolio">
-                <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture. The app is written in HTML, CSS, and jQuery.</p>
+                <h3 class="title">Quiz App</h3>
+                <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture.</p>
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/quizApp target="_blank">Github</a></p>
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
+                <p class="project">
+                    <ul class="project">
+                        <li><h3 class="tech">Technologies used:</h3></li>
+                        <li>HTML</li> 
+                        <li>CSS</li>
+                        <li>jQuery</li>
+                    </ul>
+                </p>
         </section>
+        <hr />
         <section class="container portfolio">
-            <p>Trail run app helps people to find trails in any city around the United States. Users can see the 5 days weather, map, and trail information. The app is written in HTML, CSS, jQuery, and uses APIs.</p>
+            <h3 class="title">Trail Run</h3>
+            <p>Trail run app helps people who want to find trails in any city around the United States. Users can see the 5 days weather, map, and trail information.</p>
             <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/trailrunfinder target="_blank">Github</a></p>
             <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank"><img src="img/trailrun.png" alt="Image of my  trailrun project"></a></p>
+            <p class="project">
+                <ul class="project">
+                    <li><h3 class="tech">Technologies used:</h3></li>
+                    <li>HTML</li> 
+                    <li>CSS</li>
+                    <li>jQuery</li>
+                    <li>3rd party APIs</li>
+                </ul>
+            </p>
         </section>
+        <hr />
         <section class="container portfolio">
-            <p>Not Our Backyard is built as a place for people to come together and help clean up their communities. The overview allows people to see how much garbage has been cleaned up different places around the world. Anyone can create an account and start tracking the garbage that they clean up. Let's all work together to make the world a cleaner place. The app is written in HTML, CSS, React, Jest, Chai/Mocha, Express, PostgreSQL, Knex.</p>
+            <h3 class="title">Not Our Backyard</h3>
+            <p>Not Our Backyard is built as a place for people to come together and help clean up their communities. The overview allows people to see how much garbage has been cleaned up different places around the world. Anyone can create an account and start tracking the garbage that they clean up. Let's all work together to make the world a cleaner place.</p>
             <p class="project"><a href=https://notourbackyard.now.sh/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/notourbackyard target="_blank">Github client</a> | <a href=https://github.com/oogiisar/notourbackyard-server target="_blank">Github server</a></p>
             <p class="project"><a href=https://notourbackyard.now.sh/ target="_blank"><img src="img/notourbackyard.png" alt="Image of my Not Our Backyard project"></a></p>
+            <p class="project">
+                <ul class="project">
+                    <li><h3 class="tech">Technologies used:</h3></li>
+                    <li>HTML</li> 
+                    <li>CSS</li>
+                    <li>React</li>
+                    <li>Jest</li>
+                    <li>Chai/Mocha</li>
+                    <li>Express</li>
+                    <li>PostgreSQL</li>
+                    <li>Knex</li>
+                </ul>
+            </p>
         </section>
+        <hr />
         <section class="container portfolio">
-            <p>Bucket list is built as a tool to help you track the things that you want to do in your lifetime. You can add bucketlist items to your own personal list. For each item you can list tasks you need to complete to finish you bucket list item. As you complete tasks and items you can check them off you list and see them get crossed out. Have fun and enjoy life! The app is written in HTML, CSS, React, Jest, Chai/Mocha, Express, PostgreSQL, Knex.</p>
+            <h3 class="title">Bucket List</h3>
+            <p>Bucket list is built as a tool to help you track the things that you want to do in your lifetime. You can add bucketlist items to your own personal list. For each item you can list tasks you need to complete to finish you bucket list item. As you complete tasks and items you can check them off you list and see them get crossed out. Have fun and enjoy life!</p>
             <p class="project"><a href=https://bucketlist-gules.now.sh/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/bucketlist-client target="_blank">Github client</a> | <a href=https://github.com/oogiisar/bucketlist-server target="_blank">Github server</a></p>
             <p class="project"><a href=https://bucketlist-gules.now.sh/ target="_blank"><img src="img/bucketlist.png" alt="Image of my Not Our Backyard project"></a></p>
+            <p class="project">
+                <ul class="project">
+                    <li><h3 class="tech">Technologies used:</h3></li>
+                    <li>HTML</li> 
+                    <li>CSS</li>
+                    <li>React</li>
+                    <li>Jest</li>
+                    <li>Chai/Mocha</li>
+                    <li>Express</li>
+                    <li>PostgreSQL</li>
+                    <li>Knex</li>
+                </ul>
+            </p>
         </section>
+        <hr />
         <section class="container contact">
                 <p>You can contact me anytime just click the link <a href="mailto:oogiisar@gmail.com">Oogii</a></p>
                 <p>Or check out my <a href="https://www.linkedin.com/in/oyungerel-bernstein/" target="_blank">LinkedIn</a> and <a href="https://github.com/oogiisar/" target="_blank">Github</a></p>
         </section>
     </main>
-    <footer role="content-info" class="nav_foot">
+    <footer class="nav_foot">
         <ul>
-            <li id="copyright">&copy; Oogii 2019</li>
+            <li class="copyright">&copy; Oogii 2019</li>
             <li><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
             <li><a href="https://www.linkedin.com/in/oyungerel-bernstein/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="mailto:oogiisar@gmail.com"><i class="fas fa-envelope"></i></a></li>
