updated some wording

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <title>Oogii's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/2e3e27cf9f.js"></script>
@@ -19,7 +20,7 @@
             <li class="menu nav_bio active hidden">Bio</li>
             <li class="menu nav_portfolio hidden">Portfolio</li>
             <li class="menu nav_contact hidden">Contact</li>
-            <li class="footer_data" class="copyright">&copy; Oogii 2019</li>
+            <li class="footer_data copyright">&copy; Oogii 2019</li>
             <li class="footer_data"><a href="https://github.com/oogiisar/" target="_blank"><i class="fab fa-github-alt"></i></a></li>
             <li class="footer_data"><a href="https://www.linkedin.com/in/oyungerel-bernstein/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             <li class="footer_data"><a href="mailto:oogiisar@gmail.com"><i class="fas fa-envelope"></i></a></li>
@@ -37,73 +38,65 @@
         <hr />
         <section class="container portfolio">
                 <h3 class="title">Quiz App</h3>
-                <p>This is a fun quiz app that allows you to educate yourself about Mongolia. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture.</p>
+                <p>This app is for anyone that wants to see how much they know about Mongolai. It asks you a question and tracks your score.  At the end you get a nice surprise telling you how you did and an interesting picture. I built this app to practice javascipt to present questions and track score.</p>
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/quizApp target="_blank">Github</a></p>
                 <p class="project"><a href=https://oogiisar.github.io/quizApp/ target="_blank"><img src="img/quizzApp.png" alt="Image of my  quizz app about Mongolia"></a></p>
-                <p class="project">
-                    <ul class="project">
-                        <li><h3 class="tech">Technologies used:</h3></li>
-                        <li>HTML</li> 
-                        <li>CSS</li>
-                        <li>jQuery</li>
-                    </ul>
-                </p>
-        </section>
-        <hr />
-        <section class="container portfolio">
-            <h3 class="title">Trail Run</h3>
-            <p>Trail run app helps people who want to find trails in any city around the United States. Users can see the 5 days weather, map, and trail information.</p>
-            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/trailrunfinder target="_blank">Github</a></p>
-            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank"><img src="img/trailrun.png" alt="Image of my  trailrun project"></a></p>
-            <p class="project">
                 <ul class="project">
                     <li><h3 class="tech">Technologies used:</h3></li>
                     <li>HTML</li> 
                     <li>CSS</li>
                     <li>jQuery</li>
-                    <li>3rd party APIs</li>
                 </ul>
-            </p>
+        </section>
+        <hr />
+        <section class="container portfolio">
+            <h3 class="title">Trail Run</h3>
+            <p>Trail run app helps anyone who wants to find trails in any city around the United States. Users can see the 5 days weather, map, and trail information. I am a runner myself. I always look for trails around me so I wanted to build a solution myself</p>
+            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/trailrunfinder target="_blank">Github</a></p>
+            <p class="project"><a href=https://oogiisar.github.io/trailrunfinder/ target="_blank"><img src="img/trailrun.png" alt="Image of my  trailrun project"></a></p>
+            <ul class="project">
+                <li><h3 class="tech">Technologies used:</h3></li>
+                <li>HTML</li> 
+                <li>CSS</li>
+                <li>jQuery</li>
+                <li>3rd party APIs</li>
+            </ul>
         </section>
         <hr />
         <section class="container portfolio">
             <h3 class="title">Not Our Backyard</h3>
-            <p>Not Our Backyard is built as a place for people to come together and help clean up their communities. The overview allows people to see how much garbage has been cleaned up different places around the world. Anyone can create an account and start tracking the garbage that they clean up. Let's all work together to make the world a cleaner place.</p>
+            <p>Not Our Backyard is for people who care about garbage in their community. The overview allows people to see how much garbage has been cleaned up different places around the world. Anyone can create an account and start tracking the garbage that they clean up. Let's all work together to make the world a cleaner place.  I built this app to keep help keep our environment green for the future.</p>
             <p class="project"><a href=https://notourbackyard.now.sh/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/notourbackyard target="_blank">Github client</a> | <a href=https://github.com/oogiisar/notourbackyard-server target="_blank">Github server</a></p>
             <p class="project"><a href=https://notourbackyard.now.sh/ target="_blank"><img src="img/notourbackyard.png" alt="Image of my Not Our Backyard project"></a></p>
-            <p class="project">
-                <ul class="project">
-                    <li><h3 class="tech">Technologies used:</h3></li>
-                    <li>HTML</li> 
-                    <li>CSS</li>
-                    <li>React</li>
-                    <li>Jest</li>
-                    <li>Chai/Mocha</li>
-                    <li>Express</li>
-                    <li>PostgreSQL</li>
-                    <li>Knex</li>
-                </ul>
-            </p>
+            <ul class="project">
+                <li><h3 class="tech">Technologies used:</h3></li>
+                <li>HTML</li> 
+                <li>CSS</li>
+                <li>React</li>
+                <li>Jest</li>
+                <li>Chai/Mocha</li>
+                <li>Express</li>
+                <li>PostgreSQL</li>
+                <li>Knex</li>
+            </ul>
         </section>
         <hr />
         <section class="container portfolio">
             <h3 class="title">Bucket List</h3>
-            <p>Bucket list is built as a tool to help you track the things that you want to do in your lifetime. You can add bucketlist items to your own personal list. For each item you can list tasks you need to complete to finish you bucket list item. As you complete tasks and items you can check them off you list and see them get crossed out. Have fun and enjoy life!</p>
+            <p>Bucket list is built as a tool to help anyone who wants to track the things that you want to do in thier lifetime. You can add bucketlist items to your own personal list. For each item you can list tasks you need to complete to finish you bucket list item. As you complete tasks and items you can check them off you list and see them get crossed out. Have fun and enjoy life! I built this so I have a place to look and make sure I don't forget my goals</p>
             <p class="project"><a href=https://bucketlist-gules.now.sh/ target="_blank">Live</a> | <a href=https://github.com/oogiisar/bucketlist-client target="_blank">Github client</a> | <a href=https://github.com/oogiisar/bucketlist-server target="_blank">Github server</a></p>
             <p class="project"><a href=https://bucketlist-gules.now.sh/ target="_blank"><img src="img/bucketlist.png" alt="Image of my Not Our Backyard project"></a></p>
-            <p class="project">
-                <ul class="project">
-                    <li><h3 class="tech">Technologies used:</h3></li>
-                    <li>HTML</li> 
-                    <li>CSS</li>
-                    <li>React</li>
-                    <li>Jest</li>
-                    <li>Chai/Mocha</li>
-                    <li>Express</li>
-                    <li>PostgreSQL</li>
-                    <li>Knex</li>
-                </ul>
-            </p>
+            <ul class="project">
+                <li><h3 class="tech">Technologies used:</h3></li>
+                <li>HTML</li> 
+                <li>CSS</li>
+                <li>React</li>
+                <li>Jest</li>
+                <li>Chai/Mocha</li>
+                <li>Express</li>
+                <li>PostgreSQL</li>
+                <li>Knex</li>
+            </ul>
         </section>
         <hr />
         <section class="container contact">
