fixed html validation warnings

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 </head>
 <body>
-    <nav role="navigation" class="nav_foot">
+    <nav class="nav_foot">
         <a href="javascript:void(0);" class="icon" onclick="hideMenu()">
             <i class="fa fa-bars"></i>
         </a>
@@ -26,7 +26,7 @@
             <li class="footer_data"><a href="mailto:oogiisar@gmail.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
     </nav>
-    <main role="main">
+    <main>
         <section class="container bio">
             <p id="me"><img src="img/profilePic.jpg" alt="It is me Oogii!"></p>
             <h1>Hi, I am Oogii. I am a front end development student at Thinkful.</h1>
@@ -100,6 +100,7 @@
         </section>
         <hr />
         <section class="container contact">
+                <h2>Contact</h2>
                 <p>You can contact me anytime just click the link <a href="mailto:oogiisar@gmail.com">Oogii</a></p>
                 <p>Or check out my <a href="https://www.linkedin.com/in/oyungerel-bernstein/" target="_blank">LinkedIn</a> and <a href="https://github.com/oogiisar/" target="_blank">Github</a></p>
         </section>
